base for app theme

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -35,6 +35,9 @@ $app-direction: ltr;
 
 $colors: (
   primary:    #488aff,
+  myPurple:   #2c003e,
+  myPink:     #fe346e,
+  myBlue:     #d2fafb,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
