--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,12 @@
 page-home {
+    .main{
+        
+    }
 
+     .title{
+        color: color($colors, myPink, base)!important;
+    }
+    .my-list{
+     
+    }
 }
